# water-management

./: .gitignore  CLAUDE.md  README.md  build-installer.bat  build-tauri.bat  build.bat  pom.xml  release-notes.txt
docs/: tauri-auto-update-guide.md
docs/superpowers/plans/: 2026-06-07-v1.1-enhancements.md  2026-06-07-v1.2-household-enhancements.md
docs/superpowers/specs/: 2026-06-07-v1.1-enhancements-design.md  2026-06-07-v1.2-household-enhancements-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/scripts/: patch-esbuild-windows.cjs
frontend/src/: App.vue  main.js
frontend/src/api/: index.js
frontend/src/components/: AppUpdateDialog.vue
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: index.js
frontend/src/styles/: app.css
frontend/src/utils/: accountingHealthDisplay.js  accountingRepairDisplay.js  appUpdate.js  collectionRate.js  dirtyRows.js  localDate.js  pendingBillDisplay.js  readingSave.js
frontend/src/views/: Billing.vue  Dashboard.vue  Households.vue  MaterialFee.vue  Readings.vue  Reports.vue  (+1 more)
frontend/test/: accountingHealthDisplay.test.js  accountingRepairDisplay.test.js  appUpdate.test.js  collectionRate.test.js  dirtyRows.test.js  localDate.test.js  pendingBillDisplay.test.js  readingSave.test.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/permissions/autogenerated/: download_app_update.toml  restore_database.toml  skip_app_update.toml
src-tauri/src/: app_update.rs  main.rs
src-tauri/tests/: capability_config.rs
(+321 files in other folders)
